--- a/practice1.ipynb
+++ b/practice1.ipynb
@@ -121,38 +121,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing query with job ID: 7aaa7d24-a277-4cbb-9620-880812f6996e\n",
-      "Query executing: 0.44s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ERROR:\n",
-      " 400 Invalid project ID 'college_staging'. Project IDs must contain 6-63 lowercase letters, digits, or dashes. Some project IDs also include domain name separated by a colon. IDs must start with a letter and may not end with a dash.\n",
-      "\n",
-      "(job ID: 7aaa7d24-a277-4cbb-9620-880812f6996e)\n",
-      "\n",
-      "             -----Query Job SQL Follows-----              \n",
-      "\n",
-      "    |    .    |    .    |    .    |    .    |    .    |\n",
-      "   1:select count(*) from college_staging.New_Students.csv\n",
-      "    |    .    |    .    |    .    |    .    |    .    |\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f0_</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   f0_\n",
+       "0    7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "select count(*) from college_staging.New_Student"
+    "select count(*) from college_staging.New_Students"
    ]
   },
   {
